# render-demos

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
app/: CMakeLists.txt
app/assets/shaders/dx/: deferred-data.hlsl  deferred-postprocess.hlsl  depth.hlsl  frustrum-culling.hlsl  light-cascade-shadow.hlsl  light-no-shadow.hlsl  motion-blur.hlsl  motion-data.hlsl  motion-skybox-data.hlsl  rgba.hlsl  screen-depth-texture.hlsl  screen-object.hlsl  screen-texture.hlsl  skybox-noise.hlsl  skybox.hlsl  texture.hlsl  volume-halo.hlsl
app/assets/shaders/dx/libs/: common.hlsl  fog.hlsl  light.hlsl  noise.hlsl  shadows.hlsl
app/assets/shaders/gl/: fill.fragment.glsl  texture.fragment.glsl  vertex-color.fragment.glsl  vertex.glsl  water.fragment.glsl
app/assets/textures/: download  sand-2.avif
app/src/: AppLayer.cpp  AppLayer.hpp  ModelFactory.hpp  TBN.hpp  main.cpp
app/src/gfx/: GfxEffect.hpp
app/src/gfx/CascadeShadows/: CascadeShadow.hpp  CascadeShadowEffect.cpp  CascadeShadowEffect.hpp
app/src/gfx/DeferredRendering/: DeferredRenderingEffect.cpp  DeferredRenderingEffect.hpp
app/src/gfx/FrustrumCulling/: AABB.hpp  Frustrum.hpp  FrustrumCullingEffect.cpp  FrustrumCullingEffect.hpp  Grid.hpp
app/src/gfx/FrustrumCullingGPU/: AABB.hpp  Frustrum.hpp  FrustrumCullingGPUEffect.cpp  FrustrumCullingGPUEffect.hpp  Grid.hpp
app/src/gfx/GeometryParticles/: Geometry.cpp  Geometry.hpp  GeometryParticle.cpp  GeometryParticle.hpp  GeometryParticleEffect.cpp  GeometryParticleEffect.hpp
app/src/gfx/MotionBlur/: MotionBlurEffect.cpp  MotionBlurEffect.hpp
app/src/gfx/Skybox/: SkyboxEffect.cpp  SkyboxEffect.hpp
app/src/gfx/SkyboxNoise/: SkyboxNoiseEffect.cpp  SkyboxNoiseEffect.hpp
engine/: CMakeLists.txt
engine/src/Core/: BalancedBinaryHeap.hpp  CustomTraits.hpp  Debug.hpp  EventDispatcher.hpp  EventHandler.hpp  File.cpp  File.hpp  FlatDictionary.hpp  IteratorRange.hpp  Math.cpp  Math.hpp  ObjectPool.hpp  Quad.hpp  SpatialMap.hpp  StringBuilder.hpp  Time.cpp  Time.hpp
engine/src/Engine/: Application.cpp  Application.hpp  CameraController.cpp  CameraController.hpp  Engine.hpp  Layer.cpp  Layer.hpp
engine/src/IO/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
engine/src/IO/SDL/: SDLInput.cpp  SDLInput.hpp  SDLWindow.cpp  SDLWindow.hpp
engine/src/IO/Win/: WinInput.cpp  WinInput.hpp  WinWindow.cpp  WinWindow.hpp
engine/src/Render/Abstraction/: Camera.cpp  Camera.hpp  CrossPlatformRender.cpp  CrossPlatformRender.hpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  ShaderProgramSlot.hpp
engine/src/Render/Adapters/Dx/: AdapterDx.hpp
engine/src/Render/Adapters/OpenGL/: AdapterOpenGL.hpp
engine/src/Render/Dx12Render/: DxDescriptorPool.cpp  DxDescriptorPool.hpp  DxGeometryRegistry.cpp  DxGeometryRegistry.hpp  DxMeshGeometry.hpp  DxRender.cpp  DxRender.hpp  DxTextureLoader.cpp  DxTextureLoader.hpp  DxUtils.cpp  DxUtils.hpp  UploadBuffer.hpp
engine/src/Render/Dx12Render/Frame/: DxFrameResource.hpp  DxRenderResource.hpp
engine/src/Render/Dx12Render/Infrastructure/: DxComputePass.cpp  DxComputePass.hpp  DxComputeProgram.cpp  DxComputeProgram.hpp  DxCubeMapTexture.hpp  DxDepthStencilTexture.cpp  DxDepthStencilTexture.hpp  DxFramebuffer.cpp  DxFramebuffer.hpp  DxReadWriteDataBuffer.cpp  DxReadWriteDataBuffer.hpp  DxRenderPass.cpp  DxRenderPass.hpp  DxRenderTexture.cpp  DxRenderTexture.hpp  DxResource.hpp  DxShaderProgram.cpp  DxShaderProgram.hpp  DxShaderProgramDataBuffer.cpp  DxShaderProgramDataBuffer.hpp  DxTexture.hpp
engine/src/Render/Dx12Render/shaders/: color.hlsl
engine/src/Render/OpenGLRender/: OpenGLGeometryRegistry.cpp  OpenGLGeometryRegistry.hpp  OpenGLMeshGeometry.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLUtils.cpp  OpenGLUtils.hpp
engine/src/Render/OpenGLRender/Infrastructure/: OpenGLComputeProgram.cpp  OpenGLComputeProgram.hpp  OpenGLDepthStencilTexture.cpp  OpenGLDepthStencilTexture.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRenderPass.cpp  OpenGLRenderPass.hpp  OpenGLRenderTexture.cpp  OpenGLRenderTexture.hpp  OpenGLShaderProgram.cpp  OpenGLShaderProgram.hpp  OpenGLShaderProgramDataBuffer.cpp  OpenGLShaderProgramDataBuffer.hpp  OpenGLShaderProgramSlot.cpp  OpenGLShaderProgramSlot.hpp
engine/src/Render3D_DEPRECATED/: Camera.cpp  Camera.hpp  ModelFactory.cpp  ModelFactory.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelManager.hpp  TextureLoader.cpp  TextureLoader.hpp  Viewport.cpp  Viewport.hpp
engine/src/Render3D_DEPRECATED/GfxObjects/: Framebuffer.cpp  Framebuffer.hpp  GfxImage.cpp  GfxImage.hpp  GfxObject.hpp  GfxUtils.cpp  GfxUtils.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
engine/src/Render3D_DEPRECATED/Models/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Vertex.hpp
engine/src/Render3D_DEPRECATED/Renderers/: MasterRenderer.cpp  MasterRenderer.hpp
engine/src/Render3D_DEPRECATED/Utils/: TBN.hpp
